chnge check out  page

--- a/Ucm_components/ DNDLongDistance.html
+++ b/Ucm_components/ DNDLongDistance.html
@@ -4,7 +4,7 @@
 <!--begin::Head-->
 
 <head>
-
+    <base href="../"/>
     <title> DND & Long Distance</title>
     <meta charset='utf-8' />
     <meta name='robots' content='none'>
