--- a/Ucm_components/SetWakeupCall.html
+++ b/Ucm_components/SetWakeupCall.html
@@ -4,6 +4,7 @@
 <!--begin::Head-->
 
 <head>
+    <base href="../"/>
 
     <title>Red Roof Inn - Phone Control </title>
     <meta charset='utf-8' />
@@ -78,7 +79,7 @@
                         <div class='menu menu-column pb-3  menu-state-title-primary menu-state-icon-primary menu-state-bullet-primary menu-arrow-gray-500'
                             id='#kt_aside_menu' data-kt-menu='true' data-kt-menu-expand='false'>
                             <div class='menu-item   menu-accordion'>
-                                <a class='menu-link'>
+                                <a class='menu-link '>
                                     <span class='menu-icon'>
                                         <!--begin::Svg Icon | path: icons/duotune/general/gen025.svg-->
                                         <span class='svg-icon svg-icon-2'>
