--- a/Ucm_components/CheckoutGuest.html
+++ b/Ucm_components/CheckoutGuest.html
@@ -4,7 +4,7 @@
 <!--begin::Head-->
 
 <head>
-
+<base href="../"/>
     <title>Set Wakeup Call</title>
     <meta charset='utf-8' />
     <meta name='robots' content='none'>
