--- a/index.html
+++ b/index.html
@@ -78,32 +78,23 @@
                         <div class='menu menu-column pb-3  menu-state-title-primary menu-state-icon-primary menu-state-bullet-primary menu-arrow-gray-500'
                             id='#kt_aside_menu' data-kt-menu='true' data-kt-menu-expand='false'>
                             <div class='menu-item   menu-accordion'>
-                                <a class='menu-link'>
+                                <a class='menu-link '>
                                     <span class='menu-icon'>
                                         <!--begin::Svg Icon | path: icons/duotune/general/gen025.svg-->
-                                        <span class='svg-icon svg-icon-2'>
-                                            <svg xmlns='http://www.w3.org/2000/svg' width='16' height='16'
-                                                fill='currentColor' class='bi bi-speedometer2' viewBox='0 0 16 16'>
-                                                <path
-                                                    d='M8 4a.5.5 0 0 1 .5.5V6a.5.5 0 0 1-1 0V4.5A.5.5 0 0 1 8 4zM3.732 5.732a.5.5 0 0 1 .707 0l.915.914a.5.5 0 1 1-.708.708l-.914-.915a.5.5 0 0 1 0-.707zM2 10a.5.5 0 0 1 .5-.5h1.586a.5.5 0 0 1 0 1H2.5A.5.5 0 0 1 2 10zm9.5 0a.5.5 0 0 1 .5-.5h1.5a.5.5 0 0 1 0 1H12a.5.5 0 0 1-.5-.5zm.754-4.246a.389.389 0 0 0-.527-.02L7.547 9.31a.91.91 0 1 0 1.302 1.258l3.434-4.297a.389.389 0 0 0-.029-.518z' />
-                                                <path fill-rule='evenodd'
-                                                    d='M0 10a8 8 0 1 1 15.547 2.661c-.442 1.253-1.845 1.602-2.932 1.25C11.309 13.488 9.475 13 8 13c-1.474 0-3.31.488-4.615.911-1.087.352-2.49.003-2.932-1.25A7.988 7.988 0 0 1 0 10zm8-7a7 7 0 0 0-6.603 9.329c.203.575.923.876 1.68.63C4.397 12.533 6.358 12 8 12s3.604.532 4.923.96c.757.245 1.477-.056 1.68-.631A7 7 0 0 0 8 3z' />
-                                            </svg>
+                                        <span class='svg-icon sv svg-icon-2 '>
+                                           <img class="w-25px light" src="assets/images/fa-icon/check-in (1).png" />
+                                           <img class="w-25px dark" src="assets/images/fa-icon/check-in.png" />
                                         </span>
                                         <!--end::Svg Icon-->
                                     </span>
                                     <span class='menu-title'>Checkin Guest</span>
                                 </a>
-
                             </div>
-
-
-
                         </div>
                         <div class='menu menu-column pb-3  menu-state-title-primary menu-state-icon-primary menu-state-bullet-primary menu-arrow-gray-500'
                             id='#kt_aside_menu' data-kt-menu='true' data-kt-menu-expand='false'>
                             <div class='menu-item   menu-accordion'>
-                                <a class='menu-link'>
+                                <a class='menu-link' href="Ucm_components/CheckoutGuest.html" >
                                     <span class='menu-icon'>
                                         <!--begin::Svg Icon | path: icons/duotune/general/gen025.svg-->
                                         <span class='svg-icon svg-icon-2'>
@@ -127,7 +118,7 @@
                         <div class='menu menu-column pb-3  menu-state-title-primary menu-state-icon-primary menu-state-bullet-primary menu-arrow-gray-500'
                             id='#kt_aside_menu' data-kt-menu='true' data-kt-menu-expand='false'>
                             <div class='menu-item   menu-accordion'>
-                                <a class='menu-link'>
+                                <a class='menu-link' href="Ucm_components/SetWakeupCall.html">
                                     <span class='menu-icon'>
                                         <!--begin::Svg Icon | path: icons/duotune/general/gen025.svg-->
                                         <span class='svg-icon svg-icon-2'>
@@ -155,7 +146,7 @@
                         <div class='menu menu-column pb-3  menu-state-title-primary menu-state-icon-primary menu-state-bullet-primary menu-arrow-gray-500'
                             id='#kt_aside_menu' data-kt-menu='true' data-kt-menu-expand='false'>
                             <div class='menu-item   menu-accordion'>
-                                <a class='menu-link '>
+                                <a class='menu-link ' href="Ucm_components/CancelWakeupCall.html">
                                     <span class='menu-icon'>
                                         <!--begin::Svg Icon | path: icons/duotune/general/gen025.svg-->
                                         <span class='svg-icon svg-icon-2'>
@@ -179,7 +170,7 @@
                         <div class='menu menu-column pb-3  menu-state-title-primary menu-state-icon-primary menu-state-bullet-primary menu-arrow-gray-500'
                             id='#kt_aside_menu' data-kt-menu='true' data-kt-menu-expand='false'>
                             <div class='menu-item   menu-accordion'>
-                                <a class='menu-link '>
+                                <a class='menu-link ' href="Ucm_components/ DNDLongDistance.html">
                                     <span class='menu-icon'>
                                         <!--begin::Svg Icon | path: icons/duotune/general/gen025.svg-->
                                         <span class='svg-icon svg-icon-2'>
@@ -205,7 +196,7 @@
                         <div class='menu menu-column pb-3  menu-state-title-primary menu-state-icon-primary menu-state-bullet-primary menu-arrow-gray-500'
                             id='#kt_aside_menu' data-kt-menu='true' data-kt-menu-expand='false'>
                             <div class='menu-item   menu-accordion'>
-                                <a class='menu-link '>
+                                <a class='menu-link ' href="Ucm_components/SetWakeupCall.html" >
                                     <span class='menu-icon'>
                                         <!--begin::Svg Icon | path: icons/duotune/general/gen025.svg-->
                                         <span class='svg-icon svg-icon-2'>
