--- a/Ucm_components/ DNDLongDistance.html
+++ b/Ucm_components/ DNDLongDistance.html
@@ -84,8 +84,8 @@
                                         <span class='svg-icon sv svg-icon-2 '>
                                             <img class="w-25px icon-image light"
                                                 src="assets/images/fa-icon/check-in (1).png" />
-                                            <img class="w-25px icon-image dark"
-                                                src="assets/images/fa-icon/check-in.png" />
+                                            <!-- <img class="w-25px icon-image dark"
+                                                src="assets/images/fa-icon/check-in.png" /> -->
                                         </span>
                                         <!--end::Svg Icon-->
                                     </span>
