--- a/Ucm_components/ DNDLongDistance.html
+++ b/Ucm_components/ DNDLongDistance.html
@@ -96,14 +96,14 @@
                         <div class='menu menu-column pb-3  menu-state-title-primary menu-state-icon-primary menu-state-bullet-primary menu-arrow-gray-500'
                             id='#kt_aside_menu' data-kt-menu='true' data-kt-menu-expand='false'>
                             <div class='menu-item   menu-accordion'>
-                                <a class='menu-link' href="CheckoutGuest.html">
+                                <a class='menu-link' href="Ucm_components/CheckoutGuest.html">
                                     <span class='menu-icon'>
                                         <!--begin::Svg Icon | path: icons/duotune/general/gen025.svg-->
                                         <span class='svg-icon svg-icon-2'>
                                             <img class="w-25px icon-image light"
                                                 src="assets/images/fa-icon/check-out (1).png" />
-                                            <img class="w-25px icon-image dark"
-                                                src="assets/images/fa-icon/check-out.png" />
+                                            <!-- <img class="w-25px icon-image dark"
+                                                src="assets/images/fa-icon/check-out.png" /> -->
 
                                         </span>
                                         <!--end::Svg Icon-->
@@ -117,7 +117,7 @@
                         <div class='menu menu-column pb-3  menu-state-title-primary menu-state-icon-primary menu-state-bullet-primary menu-arrow-gray-500'
                             id='#kt_aside_menu' data-kt-menu='true' data-kt-menu-expand='false'>
                             <div class='menu-item   menu-accordion'>
-                                <a class='menu-link' href="SetWakeupCall.html">
+                                <a class='menu-link' href="Ucm_components/SetWakeupCall.html">
                                     <span class='menu-icon'>
                                         <!--begin::Svg Icon | path: icons/duotune/general/gen025.svg-->
                                         <span class='svg-icon svg-icon-2'>
@@ -145,7 +145,7 @@
                         <div class='menu menu-column pb-3  menu-state-title-primary menu-state-icon-primary menu-state-bullet-primary menu-arrow-gray-500'
                             id='#kt_aside_menu' data-kt-menu='true' data-kt-menu-expand='false'>
                             <div class='menu-item   menu-accordion'>
-                                <a class='menu-link ' href="CancelWakeupCall.html">
+                                <a class='menu-link ' href="Ucm_components/CancelWakeupCall.html">
                                     <span class='menu-icon'>
                                         <!--begin::Svg Icon | path: icons/duotune/general/gen025.svg-->
                                         <span class='svg-icon svg-icon-2'>
@@ -169,7 +169,7 @@
                         <div class='menu menu-column pb-3  menu-state-title-primary menu-state-icon-primary menu-state-bullet-primary menu-arrow-gray-500'
                             id='#kt_aside_menu' data-kt-menu='true' data-kt-menu-expand='false'>
                             <div class='menu-item   menu-accordion'>
-                                <a class='menu-link active' href=" DNDLongDistance.html">
+                                <a class='menu-link active' href="Ucm_components/DNDLongDistance.html">
                                     <span class='menu-icon'>
                                         <!--begin::Svg Icon | path: icons/duotune/general/gen025.svg-->
                                         <span class='svg-icon svg-icon-2'>
@@ -195,7 +195,7 @@
                         <div class='menu menu-column pb-3  menu-state-title-primary menu-state-icon-primary menu-state-bullet-primary menu-arrow-gray-500'
                             id='#kt_aside_menu' data-kt-menu='true' data-kt-menu-expand='false'>
                             <div class='menu-item   menu-accordion'>
-                                <a class='menu-link ' href="MoveGuest.html">
+                                <a class='menu-link ' href="Ucm_components/MoveGuest.html">
                                     <span class='menu-icon'>
                                         <!--begin::Svg Icon | path: icons/duotune/general/gen025.svg-->
                                         <span class='svg-icon svg-icon-2'>
