--- a/Ucm_components/MoveGuest.html
+++ b/Ucm_components/MoveGuest.html
@@ -79,14 +79,14 @@
                         <div class='menu menu-column pb-3  menu-state-title-primary menu-state-icon-primary menu-state-bullet-primary menu-arrow-gray-500'
                             id='#kt_aside_menu' data-kt-menu='true' data-kt-menu-expand='false'>
                             <div class='menu-item   menu-accordion'>
-                                <a class='menu-link ' href="../index.html">
+                                <a class='menu-link ' href="index.html">
                                     <span class='menu-icon'>
                                         <!--begin::Svg Icon | path: icons/duotune/general/gen025.svg-->
                                         <span class='svg-icon sv svg-icon-2 '>
                                             <img class="w-25px icon-image light"
                                                 src="assets/images/fa-icon/check-in (1).png" />
-                                            <img class="w-25px icon-image dark"
-                                                src="assets/images/fa-icon/check-in.png" />
+                                            <!-- <img class="w-25px icon-image dark"
+                                                src="assets/images/fa-icon/check-in.png" /> -->
                                         </span>
                                         <!--end::Svg Icon-->
                                     </span>
@@ -103,8 +103,8 @@
                                         <span class='svg-icon svg-icon-2'>
                                             <img class="w-25px icon-image light"
                                                 src="assets/images/fa-icon/check-out (1).png" />
-                                            <img class="w-25px icon-image dark"
-                                                src="assets/images/fa-icon/check-out.png" />
+                                            <!-- <img class="w-25px icon-image dark"
+                                                src="assets/images/fa-icon/check-out.png" /> -->
 
                                         </span>
                                         <!--end::Svg Icon-->
@@ -118,7 +118,7 @@
                         <div class='menu menu-column pb-3  menu-state-title-primary menu-state-icon-primary menu-state-bullet-primary menu-arrow-gray-500'
                             id='#kt_aside_menu' data-kt-menu='true' data-kt-menu-expand='false'>
                             <div class='menu-item   menu-accordion'>
-                                <a class='menu-link' href="SetWakeupCall.html">
+                                <a class='menu-link' href="Ucm_components/SetWakeupCall.html">
                                     <span class='menu-icon'>
                                         <!--begin::Svg Icon | path: icons/duotune/general/gen025.svg-->
                                         <span class='svg-icon svg-icon-2'>
@@ -146,7 +146,7 @@
                         <div class='menu menu-column pb-3  menu-state-title-primary menu-state-icon-primary menu-state-bullet-primary menu-arrow-gray-500'
                             id='#kt_aside_menu' data-kt-menu='true' data-kt-menu-expand='false'>
                             <div class='menu-item   menu-accordion'>
-                                <a class='menu-link ' href="CancelWakeupCall.html">
+                                <a class='menu-link ' href="Ucm_components/CancelWakeupCall.html">
                                     <span class='menu-icon'>
                                         <!--begin::Svg Icon | path: icons/duotune/general/gen025.svg-->
                                         <span class='svg-icon svg-icon-2'>
@@ -170,7 +170,7 @@
                         <div class='menu menu-column pb-3  menu-state-title-primary menu-state-icon-primary menu-state-bullet-primary menu-arrow-gray-500'
                             id='#kt_aside_menu' data-kt-menu='true' data-kt-menu-expand='false'>
                             <div class='menu-item   menu-accordion'>
-                                <a class='menu-link ' href=" DNDLongDistance.html">
+                                <a class='menu-link ' href="Ucm_components/ DNDLongDistance.html">
                                     <span class='menu-icon'>
                                         <!--begin::Svg Icon | path: icons/duotune/general/gen025.svg-->
                                         <span class='svg-icon svg-icon-2'>
@@ -196,7 +196,7 @@
                         <div class='menu menu-column pb-3  menu-state-title-primary menu-state-icon-primary menu-state-bullet-primary menu-arrow-gray-500'
                             id='#kt_aside_menu' data-kt-menu='true' data-kt-menu-expand='false'>
                             <div class='menu-item   menu-accordion'>
-                                <a class='menu-link active' href="MoveGuest.html">
+                                <a class='menu-link active' href="Ucm_components/MoveGuest.html">
                                     <span class='menu-icon'>
                                         <!--begin::Svg Icon | path: icons/duotune/general/gen025.svg-->
                                         <span class='svg-icon svg-icon-2'>
