--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                                         <span class='svg-icon sv svg-icon-2 '>
                                             <img class="w-25px icon-image light"
                                                 src="assets/images/fa-icon/check-in (1).png" />
-                                            <img class="w-25px icon-image dark"
-                                                src="assets/images/fa-icon/check-in.png" />
+                                            <!-- <img class="w-25px icon-image dark"
+                                                src="assets/images/fa-icon/check-in.png" /> -->
                                         </span>
                                         <!--end::Svg Icon-->
                                     </span>
@@ -101,8 +101,8 @@
                                         <span class='svg-icon svg-icon-2'>
                                             <img class="w-25px icon-image light"
                                                 src="assets/images/fa-icon/check-out (1).png" />
-                                            <img class="w-25px icon-image dark"
-                                                src="assets/images/fa-icon/check-out.png" />
+                                            <!-- <img class="w-25px icon-image dark"
+                                                src="assets/images/fa-icon/check-out.png" /> -->
 
                                         </span>
                                         <!--end::Svg Icon-->
