--- a/Ucm_components/CheckoutGuest.html
+++ b/Ucm_components/CheckoutGuest.html
@@ -403,6 +403,7 @@
                                                             <input type="submit"
                                                                 class="btn btn-success btn-lg fs-2 fw-boldest"
                                                                 value="Click To Checkout" />
+                                                                </div>
                                                         <div class="col-md-6 ">
                                                                 <input type="button"
                                                                 class="btn btn-success btn-lg fs-2 fw-boldest"
