--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class='aside-logo flex-column-auto' id='kt_aside_logo'>
                     <!--begin::Logo-->
                     <a href='index.php'>
-                        <!-- <img src='../../../assets/LOGO/Png_UniqueIT-min.png' class='img-fluid p-7'> -->
+                        <!-- <img src='https://theuniqueitsolution.com/Images/Png_UniqueIT.png' class='img-fluid p-7'> -->
 
                     </a>
                     <!--end::Logo-->
@@ -254,7 +254,7 @@
                         <!--begin::Mobile logo-->
                         <div class='d-flex align-items-center flex-grow-1 flex-lg-grow-0'>
                             <a href='' class='d-lg-none'>
-                                <!-- <img alt='Logo' src='../../../assets/LOGO/Png_UniqueIT-min.png' class='h-30px' /> -->
+                                <!-- <img alt='Logo' src='https://theuniqueitsolution.com/Images/Png_UniqueIT.png' class='h-30px' /> -->
 
                             </a>
                         </div>
@@ -277,7 +277,7 @@
                                         id='#kt_header_menu' data-kt-menu='true'>
                                         <div data-kt-menu-trigger='click' data-kt-menu-placement='bottom-start'
                                             class='menu-item menu-lg-down-accordion me-lg-1'>
-                                            <a href='tel:+919537290206'>for Inquiry +91 9537290206</a>
+                                            <a href='tel:+917874579457'>for Inquiry +91 917874579457</a>
                                         </div>
                                     </div>
                                     <!--end::Menu-->
