--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class='aside-logo flex-column-auto' id='kt_aside_logo'>
                     <!--begin::Logo-->
                     <a href='index.php'>
-                        <!-- <img src='https://theuniqueitsolution.com/Images/Png_UniqueIT.png' class='img-fluid p-7'> -->
+                        <img src='https://theuniqueitsolution.com/Images/Png_UniqueIT.png' class='img-fluid p-7'> 
 
                     </a>
                     <!--end::Logo-->
