--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
                                         <span class='svg-icon sv svg-icon-2 '>
                                             <img class="w-25px icon-image light"
                                                 src="assets/images/fa-icon/check-in (1).png" />
-                                            <!-- <img class="w-25px icon-image dark"
-                                                src="assets/images/fa-icon/check-in.png" /> -->
+                                             <img class="w-25px icon-image dark"
+                                                src="assets/images/fa-icon/check-in-svgrepo-com.svg" /> 
                                         </span>
                                         <!--end::Svg Icon-->
                                     </span>
-                                    <span class='menu-title'>Checkin Guest</span>
+                                    <span class='menu-title'>Check-In Guest</span>
                                 </a>
                             </div>
                         </div>
@@ -100,14 +100,14 @@
                                         <!--begin::Svg Icon | path: icons/duotune/general/gen025.svg-->
                                         <span class='svg-icon svg-icon-2'>
                                             <img class="w-25px icon-image light"
-                                                src="assets/images/fa-icon/check-out (1).png" />
-                                            <!-- <img class="w-25px icon-image dark"
-                                                src="assets/images/fa-icon/check-out.png" /> -->
+                                                   src="assets/images/fa-icon/bell-boy-svgrepo-com (1).svg" /> 
+                                            <img class="w-25px icon-image dark"
+                                                src="assets/images/fa-icon/bell-boy-svgrepo-com (2).svg" />
 
                                         </span>
                                         <!--end::Svg Icon-->
                                     </span>
-                                    <span class='menu-title'>Checkout Guest</span>
+                                    <span class='menu-title'>Check-Out Guest</span>
                                 </a>
 
                             </div>
@@ -120,18 +120,15 @@
                                     <span class='menu-icon'>
                                         <!--begin::Svg Icon | path: icons/duotune/general/gen025.svg-->
                                         <span class='svg-icon svg-icon-2'>
-                                            <svg xmlns='http://www.w3.org/2000/svg' width='16' height='16'
-                                                fill='currentColor' class='bi bi-server' viewBox='0 0 16 16'>
-                                                <path
-                                                    d='M1.333 2.667C1.333 1.194 4.318 0 8 0s6.667 1.194 6.667 2.667V4c0 1.473-2.985 2.667-6.667 2.667S1.333 5.473 1.333 4V2.667z' />
-                                                <path
-                                                    d='M1.333 6.334v3C1.333 10.805 4.318 12 8 12s6.667-1.194 6.667-2.667V6.334a6.51 6.51 0 0 1-1.458.79C11.81 7.684 9.967 8 8 8c-1.966 0-3.809-.317-5.208-.876a6.508 6.508 0 0 1-1.458-.79z' />
-                                                <path
-                                                    d='M14.667 11.668a6.51 6.51 0 0 1-1.458.789c-1.4.56-3.242.876-5.21.876-1.966 0-3.809-.316-5.208-.876a6.51 6.51 0 0 1-1.458-.79v1.666C1.333 14.806 4.318 16 8 16s6.667-1.194 6.667-2.667v-1.665z' />
-                                            </svg>
+                                            <span class='svg-icon svg-icon-2'>
+                                                <img class="w-25px icon-image light "
+                                                    src="assets/images/fa-icon/wake-up-svgrepo-com (1).svg" />
+                                             <img class="w-25px icon-image dark"
+                                                    src="assets/images/fa-icon/wake-up-svgrepo-com copy.svg" />
 
                                         </span>
                                         <!--end::Svg Icon-->
+                                    </span>
                                     </span>
                                     <span class='menu-title'>Set Wakeup Call</span>
                                 </a>
@@ -148,11 +145,10 @@
                                     <span class='menu-icon'>
                                         <!--begin::Svg Icon | path: icons/duotune/general/gen025.svg-->
                                         <span class='svg-icon svg-icon-2'>
-                                            <svg xmlns='http://www.w3.org/2000/svg' width='16' height='16'
-                                                fill='currentColor' class='bi bi-people-fill' viewBox='0 0 16 16'>
-                                                <path
-                                                    d='M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1H7Zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Zm-5.784 6A2.238 2.238 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.325 6.325 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1h4.216ZM4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5Z' />
-                                            </svg>
+                                            <img class="w-25px icon-image light "
+                                                    src="assets/images/fa-icon/sleeping-svgrepo-com (1).svg" />
+                                             <img class="w-25px icon-image dark"
+                                                    src="assets/images/fa-icon/sleeping-svgrepo-com copy.svg" />
 
                                         </span>
                                         <!--end::Svg Icon-->
@@ -172,12 +168,10 @@
                                     <span class='menu-icon'>
                                         <!--begin::Svg Icon | path: icons/duotune/general/gen025.svg-->
                                         <span class='svg-icon svg-icon-2'>
-                                            <svg xmlns='http://www.w3.org/2000/svg' width='16' height='16'
-                                                fill='currentColor' class='bi bi-file-earmark-arrow-down-fill'
-                                                viewBox='0 0 16 16'>
-                                                <path
-                                                    d='M9.293 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V4.707A1 1 0 0 0 13.707 4L10 .293A1 1 0 0 0 9.293 0zM9.5 3.5v-2l3 3h-2a1 1 0 0 1-1-1zm-1 4v3.793l1.146-1.147a.5.5 0 0 1 .708.708l-2 2a.5.5 0 0 1-.708 0l-2-2a.5.5 0 0 1 .708-.708L7.5 11.293V7.5a.5.5 0 0 1 1 0z' />
-                                            </svg>
+                                            <img class="w-25px icon-image light "
+                                                    src="assets/images/fa-icon/distance-to-travel-between-two-points-svgrepo-com (1).svg" />
+                                             <img class="w-25px icon-image dark"
+                                                    src="assets/images/fa-icon/distance-to-travel-between-two-points-svgrepo-com.svg" />
 
                                         </span>
                                         <!--end::Svg Icon-->
@@ -198,12 +192,10 @@
                                     <span class='menu-icon'>
                                         <!--begin::Svg Icon | path: icons/duotune/general/gen025.svg-->
                                         <span class='svg-icon svg-icon-2'>
-                                            <svg xmlns='http://www.w3.org/2000/svg' width='16' height='16'
-                                                fill='currentColor' class='bi bi-file-earmark-arrow-down-fill'
-                                                viewBox='0 0 16 16'>
-                                                <path
-                                                    d='M9.293 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V4.707A1 1 0 0 0 13.707 4L10 .293A1 1 0 0 0 9.293 0zM9.5 3.5v-2l3 3h-2a1 1 0 0 1-1-1zm-1 4v3.793l1.146-1.147a.5.5 0 0 1 .708.708l-2 2a.5.5 0 0 1-.708 0l-2-2a.5.5 0 0 1 .708-.708L7.5 11.293V7.5a.5.5 0 0 1 1 0z' />
-                                            </svg>
+                                            <img class="w-25px icon-image light "
+                                                    src="assets/images/fa-icon/move-right-svgrepo-com (1).svg" />
+                                             <img class="w-25px icon-image dark"
+                                                    src="assets/images/fa-icon/move-right-svgrepo-com (2).svg" />
 
                                         </span>
                                         <!--end::Svg Icon-->
@@ -336,7 +328,7 @@
                                 <h3 class="card-title fw-bolder">
                                     <img src="assets/images/fa-icon/check-in.png" class="w-25px" />
                                     &nbsp;&nbsp;
-                                    Checkin Guest
+                                    Check-In Guest
                                 </h3>
                             </div>
                             <div class="card-body py-1 font-weight-bolder">
@@ -367,18 +359,6 @@
                                                     <div class="col-md-4">
                                                         <div>
 
-                                                            <select required id="cday" class="form-select form-select "
-                                                                data-control="select2" disable
-                                                                data-placeholder="Select an option" name="cday"
-                                                                disabled>
-                                                                <option value="">Select
-                                                                </option>
-                                                            </select>
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-md-4">
-                                                        <div>
-
                                                             <select required id="cmonth"
                                                                 class="form-select form-select " data-control="select2"
                                                                 disable readonly data-placeholder="Select an option"
@@ -388,6 +368,19 @@
                                                             </select>
                                                         </div>
                                                     </div>
+                                                    <div class="col-md-4">
+                                                        <div>
+
+                                                            <select required id="cday" class="form-select form-select "
+                                                                data-control="select2" disable
+                                                                data-placeholder="Select an option" name="cday"
+                                                                disabled>
+                                                                <option value="">Select
+                                                                </option>
+                                                            </select>
+                                                        </div>
+                                                    </div>
+                                                    
                                                     <div class="col-md-4">
                                                         <div>
 
@@ -406,7 +399,7 @@
                                                 <div class="row">
                                                     <div class="col-md-12 mt-3">
                                                         <label
-                                                            class=" required form-label fw-bolder font-weight-bolder fs-4 ">Checkin
+                                                            class=" required form-label fw-bolder font-weight-bolder fs-4 ">Check-In
                                                             Date: </label>
                                                     </div>
                                                     <div class="col-md-4">
@@ -481,7 +474,7 @@
                                                         <div class="col-md-12 ">
                                                             <input type="submit"
                                                                 class="btn btn-success btn-lg fs-2 fw-boldest"
-                                                                value="Click To swCheck in" />
+                                                                value="Click To Check in" />
                                                         </div>
                                                     </div>
                                                 </div>
