--- a/Ucm_components/ DNDLongDistance.html
+++ b/Ucm_components/ DNDLongDistance.html
@@ -89,7 +89,7 @@
                                         </span>
                                         <!--end::Svg Icon-->
                                     </span>
-                                    <span class='menu-title'>Checkin Guest</span>
+                                    <span class='menu-title'>Check-in Guest</span>
                                 </a>
                             </div>
                         </div>
