--- a/Ucm_components/CheckoutGuest.html
+++ b/Ucm_components/CheckoutGuest.html
@@ -89,7 +89,7 @@
                                         </span>
                                         <!--end::Svg Icon-->
                                     </span>
-                                    <span class='menu-title'>Checkin Guest</span>
+                                    <span class='menu-title'>Check-in Guest</span>
                                 </a>
                             </div>
                         </div>
@@ -382,7 +382,7 @@
                                 <h3 class="card-title fw-bolder">
                                     <img src="assets/images/fa-icon/check-in.png" class="w-25px" />
                                     &nbsp;&nbsp;
-                                    Checkin Guest</h3>
+                                    Check-out  Guest</h3>
                             </div>
                             <div class="card-body py-1 font-weight-bolder">
                                 <div class="container">
