--- a/Ucm_components/SetWakeupCall.html
+++ b/Ucm_components/SetWakeupCall.html
@@ -90,7 +90,7 @@
                                         </span>
                                         <!--end::Svg Icon-->
                                     </span>
-                                    <span class='menu-title'>Checkin Guest</span>
+                                    <span class='menu-title'>Check-in Guest</span>
                                 </a>
                             </div>
                         </div>
@@ -383,7 +383,7 @@
                                 <h3 class="card-title fw-bolder">
                                     <img src="assets/images/fa-icon/check-in.png" class="w-25px" />
                                     &nbsp;&nbsp;
-                                    Checkin Guest</h3>
+                                    Check-in Guest</h3>
                             </div>
                             <div class="card-body py-1 font-weight-bolder">
                                 <div class="container">
@@ -421,7 +421,7 @@
                                                 <div class="row">
                                                     <div class="col-md-12 mt-3">
                                                         <label class=" required form-label fw-bolder font-weight-bolder fs-4 "
-                                                        >Checkin Date: </label>
+                                                        >Check-in Date: </label>
                                                     </div>
                                                     <div class="col-md-4">
                                                         <div>
