--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                                                 <div class="row">
                                                     <div class="col-md-12 mt-3">
                                                         <label
-                                                            class=" required form-label fw-bolder font-weight-bolder fs-4 ">Checkin
+                                                            class=" required form-label fw-bolder font-weight-bolder fs-4 ">Check-in
                                                             Date: </label>
                                                     </div>
                                                     <div class="col-md-4">
