check out chnages

--- a/Ucm_components/ DNDLongDistance.html
+++ b/Ucm_components/ DNDLongDistance.html
@@ -108,7 +108,7 @@
                                         </span>
                                         <!--end::Svg Icon-->
                                     </span>
-                                    <span class='menu-title'>Checkout Guest</span>
+                                    <span class='menu-title'>Check-out Guest</span>
                                 </a>
 
                             </div>
