--- a/Ucm_components/MoveGuest.html
+++ b/Ucm_components/MoveGuest.html
@@ -109,7 +109,7 @@
                                         </span>
                                         <!--end::Svg Icon-->
                                     </span>
-                                    <span class='menu-title'>Checkout Guest</span>
+                                    <span class='menu-title'>Check-out Guest</span>
                                 </a>
 
                             </div>
