--- a/Ucm_components/SetWakeupCall.html
+++ b/Ucm_components/SetWakeupCall.html
@@ -383,7 +383,7 @@
                                 <h3 class="card-title fw-bolder">
                                     <img src="assets/images/fa-icon/check-in.png" class="w-25px" />
                                     &nbsp;&nbsp;
-                                    Check-in Guest</h3>
+                                    Set Wakeup Call</h3>
                             </div>
                             <div class="card-body py-1 font-weight-bolder">
                                 <div class="container">
