--- a/Ucm_components/CancelWakeupCall.html
+++ b/Ucm_components/CancelWakeupCall.html
@@ -382,7 +382,7 @@
                                 <h3 class="card-title fw-bolder">
                                     <img src="assets/images/fa-icon/check-in.png" class="w-25px" />
                                     &nbsp;&nbsp;
-                                    Calcel Guest</h3>
+                                    Cancel Guest</h3>
                             </div>
                             <div class="card-body py-1 font-weight-bolder">
                                 <div class="container">
